# aoc-2022

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  conventional-commits.yml
src/: lib.rs  main.rs
