[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.26.0"
itertools = "0.12.0"
lending-iterator = "0.1.6"
nom = "7.1.1"
petgraph = "0.6.2"
rayon = "1.6.1"
