[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.30.3"
itertools = "0.14.0"
lending-iterator = "0.1.6"
nom = "8.0.0"
petgraph = "0.7.0"
rayon = "1.6.1"
